correction du collapse

--- a/src/styles/components/dropDown.scss
+++ b/src/styles/components/dropDown.scss
@@ -1,7 +1,7 @@
 .drop-down {
   border-radius: 10px 10px 5px 5px;
   background: $backround-color;
-  margin: 40px 200px;
+  margin: 40px 0px 0px 0px;
   .top-bar {
     border-radius: 5px;
     background: $main-color;
