--- a/src/styles/components/housingPage.scss
+++ b/src/styles/components/housingPage.scss
@@ -4,6 +4,7 @@
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
+
   .carrousel {
     width: 100%;
     height: 415px;
@@ -31,13 +32,12 @@
         gap: 10px;
         .tag {
           //   width: 115px;
-          //   height: 25px;
-          flex-shrink: 0;
+          height: 21px;
+          // flex-shrink: 0;
           border-radius: 10px;
           background: $main-color;
           color: white;
-          align-items: center;
-          padding: 10px;
+          padding: 2px 5px;
         }
       }
     }
@@ -59,6 +59,15 @@
           height: 64px;
         }
       }
+    }
+  }
+  .description {
+    display: flex;
+    flex-direction: row;
+    gap: 76px;
+    .drop-down {
+      width: 50%;
+      // margin: 0px;
     }
   }
 }
