--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -14,10 +14,13 @@
   flex-direction: column;
   min-height: 100vh;
   // justify-content: space-between;
-  div {
-    flex: 1;
-  }
+  // div {
+  //   flex: 1;
+  // }
 }
 body {
   margin: 0;
+}
+.apropos-container {
+  margin: 0px 200px;
 }
